Renamed ExampleHomebridgePlatform to AirQ

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "airq",
     "air-q",
     "air q",
-    "air Q"
+    "air Q",
+    "air"
   ],
   "dependencies": {},
   "devDependencies": {
