--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "air Q",
     "air"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "crypto-js": "^4.1.1"
+  },
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
