--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "air-Q",
   "name": "homebridge-air-q",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This plugin provides support for the air-Q air analyzer.",
   "license": "Apache-2.0",
   "repository": {
@@ -37,6 +37,7 @@
     "airq plugin"
   ],
   "dependencies": {
+    "bonjour-hap": "^3.6.3",
     "crypto-js": "^4.1.1"
   },
   "devDependencies": {
