Replaced http client with axios for data retrieval. This allows for catching connection errors, when device is not reachable. Also combined sensor status and data requests to single request. Hence, sensor status is now immediately 0 when connection to air-Q is lost. (#7)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "air-Q",
   "name": "homebridge-air-q",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "This plugin provides support for the air-Q air analyzer.",
   "license": "Apache-2.0",
   "repository": {
@@ -37,6 +37,7 @@
     "airq plugin"
   ],
   "dependencies": {
+    "axios": "^0.27.1",
     "bonjour-hap": "^3.6.3",
     "crypto-js": "^4.1.1"
   },
